--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         },
         "files":[
             "app/helpers/config.php",
-            "app/helpers/redirect.php"
+            "app/helpers/redirect.php",
+            "app/helpers/twig_variables.php"
         ]
     }
 }
